[Revert] "Set header height to fixed pixel"
This reverts commit 625720420ea49f2a0d14aad9a6679541f77c7d69. Setting height in
px results in variable (font-size) contents overflowing.

--- a/skinStyles/mobile.startup/Overlay.less
+++ b/skinStyles/mobile.startup/Overlay.less
@@ -25,7 +25,7 @@
 }
 
 .overlay-header .overlay-title {
-	padding: @headerVerticalPadding 0;
+	padding: 0.15em 0;
 
 	&:last-child {
 		// Reserve space to the right in case the search form in the header or
